--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "AI-powered accounting agent with colorful UI",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
+    "autoprefixer": "^10.4.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.292.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "@headlessui/react": "^1.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.0",
-    "recharts": "^2.8.0"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,4 +44,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
